<resources>
    <string name="app_name">Desktopia</string>
    <string name="dreamsetup">#Dreamsetup</string>
    <string name="battlestations">#Battlestations</string>
    <string name="pcgamingsetup">#Pcgmingsetup</string>
    <string name="workstation">#Workstation</string>
    <string name="help">Help</string>

    <!-- AlertDialog list-->
    <string name="hashtag_chooser">Hashtag Selection</string>
    <string name="reddit">Reddit</string>
    <string name="caption">Caption</string>
    <string name="info">Info</string>
    <string name="posted">Posted:</string>
    <string name="height">Height:</string>
    <string name="width">Width:</string>
    <string name="instagram">Instagram</string>
    <string name="desksetup">#desksetup</string>
    <string name="battlestation">#battlestation</string>
    <string name="listing">Listing</string>
    <string name="subreddit">Subreddit</string>
    <string name="share">Share</string>
    <string name="direct">Direct</string>


    <string-array name="listing_array">
        <item>hot</item>
        <item>new</item>
        <item>rising</item>
        <item>top</item>
    </string-array>

    <string-array name="subreddit_array">
        <item>Battlestations</item>
        <item>Average Battlestations</item>
        <item>Battletops</item>
        <item>Shitty Battlestations</item>
    </string-array>


    <!--    Array of words to filter from Instagram's JSON tag thumbnailImage.
    TODO Find a way to filter number-->
    <string-array name="grid_filter">
        <item>text</item>
        <item>people standing</item>
        <item>food</item>
        <item>drink</item>
        <item>shoes</item>
        <item>standing</item>
        <item>outdoor</item>
        <item>meme</item>
        <item>beard</item>
        <item>people sitting</item>
        <item>closeup</item>
    </string-array>


</resources>
