<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.example.z4fir.desktopia.screens.showcase.instagram.ui.InstagramViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/EERIE_BLACK"
            tools:context=".screens.showcase.instagram.fragments.InstagramShowcaseFragment">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/showcase_instagram_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
                android:id="@+id/instagram_tab_selection"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/BABY_POWDER"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/swipe_refresh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showcase_instagram_toolbar">

            <Button
                    android:id="@+id/instagram_hashtag_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/battlestation" />

            <View
                    android:id="@+id/view_divider"
                    android:layout_width="1px"
                    android:layout_height="45dp"
                    android:background="@color/grey_10" />

            <Button
                    android:id="@+id/instagram_hashtag_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/desksetup" />

            <View
                    android:id="@+id/view_divider2"
                    android:layout_width="1px"
                    android:layout_height="45dp"
                    android:background="@color/grey_10" />

            <Button
                    android:id="@+id/instagram_hashtag_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/dreamsetup" />


        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instagram_tab_selection">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/showcase_instagram_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:splitMotionEvents="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:itemCount="16"
                    tools:listitem="@layout/instagram_grid_view_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>