<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="url"
                type="String" />

        <variable
                name="hashTag"
                type="String" />

        <variable
                name="caption"
                type="String" />

        <variable
                name="timeStamp"
                type="String" />
    </data>


    <ScrollView
            android:id="@+id/tagPost_detail_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/BABY_POWDER"
            android:scrollbarAlwaysDrawHorizontalTrack="false">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tagPost_detail_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/tagPost_detail_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:minHeight="?attr/actionBarSize"
                        android:theme="?attr/actionBarTheme"
                        app:layout_constraintBottom_toTopOf="@+id/tagPost_detail_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <com.github.chrisbanes.photoview.PhotoView
                        android:id="@+id/tagPost_detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:imageUrl="@{url}"
                        app:layout_constraintBottom_toTopOf="@+id/expand_views"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tagPost_detail_toolbar"
                        tools:src="@drawable/image_2" />

                <LinearLayout
                        android:id="@+id/expand_views"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/tagPost_detail_image"
                        tools:layout_editor_absoluteX="16dp">

                    <LinearLayout
                            android:id="@+id/caption_layout"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@color/BABY_POWDER"
                            android:gravity="center_vertical"
                            android:minHeight="?attr/actionBarSize"
                            android:orientation="horizontal">

                        <ImageButton
                                android:layout_width="?attr/actionBarSize"
                                android:layout_height="?attr/actionBarSize"
                                android:background="@android:color/transparent"
                                android:tint="@color/grey_40"
                                app:srcCompat="@drawable/ic_short_text_black_24dp" />

                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/caption"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_40" />

                        <View
                                android:layout_width="@dimen/spacing_smlarge"
                                android:layout_height="wrap_content" />

                        <ImageButton
                                android:id="@+id/bt_toggle_caption"
                                android:layout_width="?attr/actionBarSize"
                                android:layout_height="?attr/actionBarSize"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:tint="@color/grey_40"
                                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />


                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/expanded_caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">


                        <TextView
                                android:id="@+id/tagPost_detail_caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:text="@{caption}"
                                android:textColor="@color/INACTIVE_ICONS"
                                android:textSize="18sp" />

                    </LinearLayout>

                    <View
                            android:id="@+id/view_divider"
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/grey_10" />

                    <!--            Information expanded-->

                    <LinearLayout
                            android:id="@+id/info_layout"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@color/BABY_POWDER"
                            android:gravity="center_vertical"
                            android:minHeight="?attr/actionBarSize"
                            android:orientation="horizontal">

                        <ImageButton
                                android:layout_width="?attr/actionBarSize"
                                android:layout_height="?attr/actionBarSize"
                                android:background="@android:color/transparent"
                                android:tint="@color/grey_40"
                                app:srcCompat="@drawable/ic_info_outline_black_24dp" />

                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/info"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_40" />

                        <View
                                android:layout_width="@dimen/spacing_smlarge"
                                android:layout_height="wrap_content" />

                        <ImageButton
                                android:id="@+id/bt_toggle_info"
                                android:layout_width="?attr/actionBarSize"
                                android:layout_height="?attr/actionBarSize"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:tint="@color/grey_40"
                                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />


                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/expanded_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                        <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <TextView
                                    android:id="@+id/posted"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/posted"
                                    android:textColor="@color/grey_40"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />


                            <TextView
                                    android:id="@+id/info_time_data"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:text="@{timeStamp}"
                                    android:textColor="@color/grey_40"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/posted"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="place holder text" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
